--- a/index.html
+++ b/index.html
@@ -118,30 +118,49 @@
   <div id="tabs"></div>
   <div id="tabContents"></div>
 
-  <!-- Form điểm danh (ẩn ban đầu) -->
+  <!-- Form Chi (ẩn ban đầu) -->
   <div id="chiModal" class="modal-overlay" style="display: none;">
     <div class="modal-content">
-      <h3>📅 Khoản chi</h3>
+      <h3>💸 Ghi chi tiêu</h3>
 
-      <label>Ngày:
-        <input type="date" id="dd-date" />
+      <label>Chọn tour:
+        <select id="chi-tour-select" onchange="onChangeTourInChi()"></select>
       </label>
 
-      <label>Lớp:
-        <select id="dd-class" onchange="loadStudentsForClass()"></select>
+      <label>Tên khoản chi:
+        <input type="text" id="chi-ten-khoan" placeholder="Mua nước, ăn trưa..." />
       </label>
 
-      <label>Họ và tên:
-        <select id="dd-student"></select>
+      <label>Danh mục chi:
+        <select id="chi-danh-muc-select"></select>
+      </label>
+
+      <label>Số tiền:
+        <input type="number" id="chi-so-tien" min="1000" step="1000" />
+      </label>
+
+      <label>Thời gian:
+        <input type="datetime-local" id="chi-thoi-gian" />
+      </label>
+
+      <label>💰 Nguồn chi:
+        <select id="chi-nguon-chi">
+          <option value="">Quỹ chung</option>
+        </select>
+      </label>
+
+      <label>Ghi chú:
+        <textarea id="chi-ghi-chu" rows="2" style="width: 100%;"></textarea>
       </label>
 
       <div class="modal-actions">
-        <button onclick="submitDiemDanh(1)">🟢 Có</button>
-        <button onclick="submitDiemDanh(0)">❌ Nghỉ</button>
-        <button class="btn-cancel" onclick="closeDiemDanh()">🔙 Huỷ</button>
+        <button onclick="submitChi()">💾 Lưu</button>
+        <button class="btn-cancel" onclick="closeChi()">🔙 Huỷ</button>
       </div>
     </div>
   </div>
+
+
 
 
   <!-- Form Thêm Tour -->
@@ -150,7 +169,8 @@
       <h3>🌍 Thêm Tour</h3>
 
       <label style="color: #ff0000;">Tên tour: *
-        <input type="text" id="tour-ten" required />
+        <!-- <input type="text" id="tour-ten" required /> -->
+        <input type="text" id="tour-ten" autocapitalize="none" />
       </label>
 
       <label>Ngày đi: *
@@ -271,10 +291,6 @@
         <input type="number" id="tv-tyle" placeholder="100" min="0" max="100" value="100" />
       </label>
 
-      <label>Ghi chú:
-        <textarea id="tv-ghichu" rows="2" style="width: 100%; padding: 6px; font-size: 16px;"></textarea>
-      </label>
-
       <div class="modal-actions">
         <button onclick="submitThemThanhVien()">➕ Lưu</button>
         <button class="btn-cancel" onclick="closeThemThanhVien()">🔙 Huỷ</button>
@@ -344,99 +360,39 @@
 
 
 
-  <!-- Form Sửa ngày điểm danh -->
-  <div id="suaNgayModal" class="modal-overlay" style="display: none;">
-    <div class="modal-content">
-      <h3>📆 Sửa ngày điểm danh</h3>
-
-      <label>Chọn lớp:
-        <select id="sua-ngay-class" onchange="loadDatesForClass()"></select>
-      </label>
-
-      <label>Chọn ngày cần sửa:
-        <select id="sua-ngay-cu"></select>
-      </label>
-
-      <label>Ngày mới:
-        <input type="date" id="sua-ngay-moi" />
-      </label>
-
-      <div class="modal-actions">
-        <button onclick="submitSuaNgay()">✏️ Sửa</button>
-        <button onclick="submitXoaNgay()">🗑️ Xóa</button>
-        <button class="btn-cancel" onclick="closeSuaNgay()">🔙 Huỷ</button>
-      </div>
-    </div>
-  </div>
-
-  <!-- Khung theo dõi thu học phí -->
-  <div id="hophithongke">
-    <div class="thongke-container">
-
-      <!-- Hàng "Đã thu" -->
-      <div class="thongke-row">
-        <button id="btn-dathu" class="thongke-button same-width">
-          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-thumbs-up-icon lucide-thumbs-up"><path d="M7 10v12"/><path d="M15 5.88 14 10h5.83a2 2 0 0 1 1.92 2.56l-2.33 8A2 2 0 0 1 17.5 22H4a2 2 0 0 1-2-2v-8a2 2 0 0 1 2-2h2.76a2 2 0 0 0 1.79-1.11L12 2a3.13 3.13 0 0 1 3 3.88Z"/></svg>
-          <span style="padding-left: 6px;">Đã thu</span></button>
-        <div class="thongke-info">
-          <span id="count-dathu">0</span> học sinh – Số tiền: <span id="sum-dathu">0 đ</span>
-        </div>
-      </div>
-
-      <!-- Hàng "Chưa thu" -->
-      <div class="thongke-row">
-        <button id="btn-chuathu" class="thongke-button same-width">
-          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-thumbs-down-icon lucide-thumbs-down"><path d="M17 14V2"/><path d="M9 18.12 10 14H4.17a2 2 0 0 1-1.92-2.56l2.33-8A2 2 0 0 1 6.5 2H20a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2h-2.76a2 2 0 0 0-1.79 1.11L12 22a3.13 3.13 0 0 1-3-3.88Z"/></svg>
-          <span style="padding-left: 6px;">Chưa thu</span></button>
-        <div class="thongke-info">
-          <span id="count-chuathu">0</span> học sinh – Số tiền: <span id="sum-chuathu">0 đ</span>
-        </div>
-      </div>
-
-      <!-- Thanh progress bar -->
-      <div class="progress-wrapper">
-        <div class="bubble-progress-container">
-          <div class="percent-label" id="progress-label">%</div>
-          <div class="progress-bar-bg">
-            <div id="progress-bar" class="progress-bar-fill"></div>
-          </div>
-        </div>
-      </div>
-
-    </div>
-  </div>
-
-
-  <!-- Form Thu học phí -->
+  <!-- Form Thu -->
   <div id="thuModal" class="modal-overlay" style="display: none;">
     <div class="modal-content">
-      <h3>💰 Thu học phí</h3>
+      <h3>💰 Thu tiền đóng góp</h3>
 
-      <label>Chọn lớp:
-        <select id="thu-class" onchange="onChangeClassInThu()"></select>
+      <label>Chọn tour:
+        <select id="thu-tour-select" onchange="onChangeTourInThu()"></select>
       </label>
 
-      <label>Chọn học sinh:
-        <select id="thu-student" onchange="updateTienThuHocPhi()"></select>
+      <label>Chọn thành viên:
+        <select id="thu-tv-select"></select>
       </label>
 
-      <label>Số tiền cần thu:
-        <input type="text" id="thu-money" readonly />
+      <label>Số tiền:
+        <input type="number" id="thu-so-tien" min="1000" step="1000" />
+      </label>
+
+      <label>Thời gian:
+        <input type="datetime-local" id="thu-thoi-gian" />
+      </label>
+
+      <label>Ghi chú:
+        <textarea id="thu-ghi-chu" rows="2" style="width:100%;"></textarea>
       </label>
 
       <div class="modal-actions">
-        <button onclick="submitThuHocPhi()">🤑 Thu</button>
-        <button class="btn-boqua" onclick="skipThuHocPhi()">⏭ Bỏ qua</button>
-        <button class="btn-cancel" onclick="closeThuHocPhi()">🔙 Huỷ</button>
+        <button onclick="submitThu()">💾 Lưu</button>
+        <button class="btn-cancel" onclick="closeThu()">🔙 Huỷ</button>
       </div>
-
-      <div class="status-bar-thuhocphi">
-        Thu học phí khi kết thúc lớp học.<br/>
-        Sau đó cần tạo lớp học mới.
-      </div>
-
     </div>
   </div>
+
+
 
   <!-- Form Hướng dẫn back up -->
   <div id="backupModal" class="modal-overlay" style="display: none;">
