--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
       <div style="display: flex; gap: 10px;">
         <label style="flex: 2;">
           Số tiền đóng góp:
-          <input type="number" id="tv-sotien" placeholder="100000" min="0" />
+          <input type="tel" inputmode="numeric" id="tv-sotien" placeholder="100000" min="0" />
         </label>
         <label style="flex: 1;">
           Tỉ lệ (%):
