--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
       </label>
 
       <label>Số tiền:
-        <input type="number" id="chi-so-tien" min="1000" step="1000" />
+        <input type="tel" inputmode="numeric" id="chi-so-tien" min="1000" step="1000" />
       </label>
 
       <label>Thời gian:
@@ -290,7 +290,7 @@
       </div>
 
       <label>Số điện thoại:
-        <input type="text" id="tv-sdt" placeholder="0978xxxxxx" />
+        <input type="tel" inputmode="numeric" id="tv-sdt" placeholder="0978xxxxxx" />
       </label>
       
       <!-- Gộp Số tiền + Tỉ lệ đóng góp -->
@@ -301,7 +301,7 @@
         </label>
         <label style="flex: 1;">
           Tỉ lệ (%):
-          <input type="number" id="tv-tyle" placeholder="100" min="0" max="100" value="100" />
+          <input type="tel" inputmode="numeric" id="tv-tyle" placeholder="100" min="0" max="100" value="100" />
         </label>
       </div>
 
@@ -342,11 +342,11 @@
     </div>
 
     <label>Số điện thoại:
-      <input type="text" id="edit-tv-sdt" placeholder="0978xxxxxx" />
+      <input type="tel" inputmode="numeric" id="edit-tv-sdt" placeholder="0978xxxxxx" />
     </label>
 
     <label>Tỉ lệ đóng góp (%):
-      <input type="number" id="edit-tv-tyle" placeholder="100" min="0" max="100" />
+      <input type="tel" inputmode="numeric" id="edit-tv-tyle" placeholder="100" min="0" max="100" />
     </label>
 
     <div class="modal-actions">
@@ -395,7 +395,7 @@
       </label>
 
       <label>Số tiền:
-        <input type="number" id="thu-so-tien" min="1000" step="1000" />
+        <input type="tel" inputmode="numeric" id="thu-so-tien" min="1000" step="1000" />
       </label>
 
       <label>Thời gian:
