--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <nav class="menu-bar">
         <ul class="menu">
             <li class="has-submenu">
-            <span onclick="toggleSubmenu(this)">📚 Tour
+            <span onclick="toggleSubmenu(this)">✈️ Tour
                 <svg xmlns="http://www.w3.org/2000/svg"
                     viewBox="0 0 24 24"
                     fill="currentColor"
@@ -48,13 +48,13 @@
                 </svg>
             </span>
             <ul class="submenu">
-                <li onclick="handleThemTour()">🏫 Thêm Tour</li>
+                <li onclick="handleThemTour()">🌍 Thêm Tour</li>
                 <li onclick="handleSuaTour()">🛠️ Sửa thông tin Tour</li>
                 <li onclick="handleXoaTour()">🗑️ Xóa Tour</li>
             </ul>
             </li>
             <li class="has-submenu">
-            <span onclick="toggleSubmenu(this)">💁‍♂️ Thành viên 
+            <span onclick="toggleSubmenu(this)">👨‍👩‍👧‍👦 Thành viên 
                 <svg xmlns="http://www.w3.org/2000/svg"
                     viewBox="0 0 24 24"
                     fill="currentColor"
@@ -92,7 +92,7 @@
 
     <div class="action-buttons">   
         <button onclick="handleThu()">💰 Thu</button>
-        <button onclick="handleChi()">📅 Chi</button>
+        <button onclick="handleChi()">💸 Chi</button>
     </div>
 
 
@@ -281,10 +281,10 @@
       <label>Tên thành viên:</label>
       <div style="display: flex; gap: 10px;">
         <select id="tv-gioitinh" style="flex: 1;">
-          <option value="nam">👨 Nam</option>
-          <option value="nu">👩 Nữ</option>
-          <option value="be_nam">👦 Bé Nam</option>
-          <option value="be_nu">👧 Bé Nữ</option>
+          <option value="nam">🙋‍♂️ Nam</option>
+          <option value="nu">🙋‍♀️ Nữ</option>
+          <option value="be_trai">👦 Bé trai</option>
+          <option value="be_gai">👧 Bé gái</option>
         </select>
         <input type="text" id="tv-ten" placeholder="Nguyễn Văn A" style="flex: 3;" />
       </div>
@@ -333,10 +333,10 @@
     <label>Tên thành viên:</label>
     <div style="display: flex; gap: 10px;">
       <select id="edit-tv-gioitinh" style="flex: 1;">
-        <option value="nam">👨 Nam</option>
-        <option value="nu">👩 Nữ</option>
-        <option value="be_nam">👦 Bé Nam</option>
-        <option value="be_nu">👧 Bé Nữ</option>
+          <option value="nam">🙋‍♂️ Nam</option>
+          <option value="nu">🙋‍♀️ Nữ</option>
+          <option value="be_trai">👦 Bé trai</option>
+          <option value="be_gai">👧 Bé gái</option>
       </select>
       <input type="text" id="edit-tv-name" placeholder="Nguyễn Văn A" style="flex: 3;" />
     </div>
