--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </ul>
             </li>
             <li class="has-submenu">
-            <span onclick="toggleSubmenu(this)">👨‍👩‍👧‍👦👨‍👩‍👦👫👥 Thành viên 
+            <span onclick="toggleSubmenu(this)">👨‍👩‍👧👨‍👩👫 Thành viên 
                 <svg xmlns="http://www.w3.org/2000/svg"
                     viewBox="0 0 24 24"
                     fill="currentColor"
