--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
       <h3>🌍 Thêm Tour mới</h3>
 
       <label style="color: #ff0000;">Tên: *
-        <input type="text" id="tour-ten" style="text-transform: capitalize;"/>
+        <input type="text" id="tour-ten"/>
       </label>
 
       <!-- Gộp ngày đi và ngày về thành 1 hàng -->
