--- a/index.html
+++ b/index.html
@@ -281,10 +281,10 @@
       <label>Tên thành viên:</label>
       <div style="display: flex; gap: 10px;">
         <select id="tv-gioitinh" style="flex: 1;">
-          <option value="nam">🙋‍♂️ Nam</option>
-          <option value="nu">🙋‍♀️ Nữ</option>
-          <option value="be_trai">👦 Bé trai</option>
-          <option value="be_gai">👧 Bé gái</option>
+          <option value="nam">🙋‍♂️</option>
+          <option value="nu">🙋‍♀️</option>
+          <option value="be_trai">👦</option>
+          <option value="be_gai">👧</option>
         </select>
         <input type="text" id="tv-ten" placeholder="Nguyễn Văn A" style="flex: 3;" />
       </div>
@@ -333,10 +333,10 @@
     <label>Tên thành viên:</label>
     <div style="display: flex; gap: 10px;">
       <select id="edit-tv-gioitinh" style="flex: 1;">
-          <option value="nam">🙋‍♂️ Nam</option>
-          <option value="nu">🙋‍♀️ Nữ</option>
-          <option value="be_trai">👦 Bé trai</option>
-          <option value="be_gai">👧 Bé gái</option>
+          <option value="nam">🙋‍♂️</option>
+          <option value="nu">🙋‍♀️</option>
+          <option value="be_trai">👦</option>
+          <option value="be_gai">👧</option>
       </select>
       <input type="text" id="edit-tv-name" placeholder="Nguyễn Văn A" style="flex: 3;" />
     </div>
