--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
           <option value="be_trai">👦</option>
           <option value="be_gai">👧</option>
         </select>
-        <input type="text" id="tv-ten" placeholder="Nguyễn Văn A" style="flex: 5;" />
+        <input type="text" id="tv-ten" placeholder="Nguyễn Văn A" style="flex: 5; text-transform: capitalize;" />
       </div>
 
       <label>Số điện thoại:
@@ -297,7 +297,7 @@
       <div style="display: flex; gap: 10px;">
         <label style="flex: 2;">
           Số tiền đóng góp:
-          <input type="tel" inputmode="numeric" id="tv-sotien" placeholder="100000" min="0" />
+          <input type="tel" inputmode="numeric" id="tv-sotien" min="0" />
         </label>
         <label style="flex: 1;">
           Tỉ lệ (%):
