--- a/index.html
+++ b/index.html
@@ -120,18 +120,18 @@
   <!-- Form Chi (ẩn ban đầu) -->
   <div id="chiModal" class="modal-overlay" style="display: none;">
     <div class="modal-content">
-      <h3>💸 Ghi chi tiêu</h3>
+      <h3>💸 Thêm khoản chi</h3>
 
       <label>Chọn tour:
         <select id="chi-tour-select"></select>
       </label>
 
-      <label>Tên khoản chi:
-        <input type="text" id="chi-ten-khoan" placeholder="Mua nước, ăn trưa..." />
-      </label>
-
       <label>Danh mục chi:
         <select id="chi-danh-muc-select"></select>
+      </label>
+
+      <label>Tên khoản chi:
+        <input type="text" id="chi-ten-khoan" placeholder="Mua nước, ăn trưa..." />
       </label>
 
       <label>Số tiền:
