--- a/index.html
+++ b/index.html
@@ -278,16 +278,18 @@
       </label>
 
       <!-- Gộp Giới tính + Họ tên thành viên -->
-      <label>Tên thành viên:</label>
-      <div style="display: flex; gap: 10px;">
-        <select id="tv-gioitinh" style="flex: 1;">
-          <option value="nam">🙋‍♂️</option>
-          <option value="nu">🙋‍♀️</option>
-          <option value="be_trai">👦</option>
-          <option value="be_gai">👧</option>
-        </select>
-        <input type="text" id="tv-ten" placeholder="Nguyễn Văn A" style="flex: 5; text-transform: capitalize;" />
-      </div>
+      <label style="display: block; color: red;">
+        Tên thành viên: *
+        <div style="display: flex; gap: 10px; margin-top: 4px;">
+          <select id="tv-gioitinh" style="flex: 1;">
+            <option value="nam">🙋‍♂️</option>
+            <option value="nu">🙋‍♀️</option>
+            <option value="be_trai">👦</option>
+            <option value="be_gai">👧</option>
+          </select>
+          <input type="text" id="tv-ten" placeholder="Nguyễn Văn A" style="flex: 5; text-transform: capitalize;" />
+        </div>
+      </label>
 
       <label>Số điện thoại:
         <input type="tel" inputmode="numeric" id="tv-sdt" placeholder="0978xxxxxx" />
@@ -330,16 +332,18 @@
     </label>
 
     <!-- Gộp giới tính + tên thành viên -->
-    <label>Tên thành viên:</label>
-    <div style="display: flex; gap: 10px;">
-      <select id="edit-tv-gioitinh" style="flex: 1;">
+    <label style="display: block;">
+      Tên thành viên:
+      <div style="display: flex; gap: 10px; margin-top: 4px;">
+        <select id="edit-tv-gioitinh" style="flex: 1;">
           <option value="nam">🙋‍♂️</option>
           <option value="nu">🙋‍♀️</option>
           <option value="be_trai">👦</option>
           <option value="be_gai">👧</option>
-      </select>
-      <input type="text" id="edit-tv-name" placeholder="Nguyễn Văn A" style="flex: 5;" />
-    </div>
+        </select>
+        <input type="text" id="edit-tv-name" placeholder="Nguyễn Văn A" style="flex: 5;" />
+      </div>
+    </label>
 
     <label>Số điện thoại:
       <input type="tel" inputmode="numeric" id="edit-tv-sdt" placeholder="0978xxxxxx" />
