--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
     <h3>✍️ Sửa thông tin thành viên</h3>
 
     <label>Chọn tour:
-      <select id="edit-tv-tour" onchange="loadThanhVienForEdit(); onChangeTourInSuaTv();"></select>
+      <select id="edit-tv-tour" onchange="loadThanhVienForEdit();"></select>
     </label>
 
     <label>Chọn thành viên:
@@ -369,7 +369,7 @@
       <h3>🙅‍♂️ Xóa thành viên</h3>
 
       <label>Chọn tour:
-        <select id="xoa-tv-tour" onchange="loadThanhVienForXoa(); onChangeTourInXoaTv();"></select>
+        <select id="xoa-tv-tour" onchange="loadThanhVienForXoa();"></select>
       </label>
 
       <label>Chọn thành viên:
