--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <li onclick="handleXoaThanhVien()">🙅‍♂️ Xóa thành viên</li>
             </ul>
             </li>
-            <li onclick="location.href='lichsuthutien.html'"><span>📊 Thống kê</span></li>
+            <li onclick="location.href='thongke.html'"><span>📊 Thống kê</span></li>
             <li class="has-submenu">
             <span onclick="toggleSubmenu(this)">💾 Cơ sở dữ liệu
                 <svg xmlns="http://www.w3.org/2000/svg"
