--- a/thongke.html
+++ b/thongke.html
@@ -66,6 +66,19 @@
     .expense-item {
       margin: 4px 0;
     }
+
+    #categoryStats {
+    width: 100%;
+    /* max-width: 600px; */
+    margin: 0 auto;
+    box-sizing: border-box;
+  }
+
+  /* Tùy chọn: giữ cho thanh progress không tràn */
+  .progress-bar-bg {
+    width: 100%;
+    box-sizing: border-box;
+  }
   </style>
 </head>
 <body>
@@ -99,7 +112,7 @@
   </div>
 
   <div class="section">
-    <h2>Phân tích chi theo danh mục</h2>
+    <h2>Chi tiết</h2>
     <div id="categoryStats"></div>
   </div>
 
