--- a/thongke.html
+++ b/thongke.html
@@ -139,11 +139,10 @@
         class="lucide lucide-arrow-big-left-icon lucide-arrow-big-left" style="margin-right: 6px;">
         <path d="M18 15h-6v4l-7-7 7-7v4h6v6z" />
       </svg>
-      Quay lại
     </a>
 
 
-    <h1>📊 Thống kê</h1>
+    <h1>Thống kê</h1>
   </div>
 
   <div class="section">
