--- a/index.html
+++ b/index.html
@@ -302,8 +302,8 @@
           <input type="tel" inputmode="numeric" id="tv-sotien" min="0" />
         </label>
         <label style="flex: 1;">
-          Tỉ lệ (%):
-          <input type="tel" inputmode="numeric" id="tv-tyle" placeholder="100" min="0" max="100" value="100" />
+          Tỉ lệ đóng:
+          <input type="tel" inputmode="numeric" id="tv-tyle" min="0" max="100" value="100" />
         </label>
       </div>
 
@@ -349,8 +349,8 @@
       <input type="tel" inputmode="numeric" id="edit-tv-sdt"/>
     </label>
 
-    <label>Tỉ lệ đóng góp (%):
-      <input type="tel" inputmode="numeric" id="edit-tv-tyle" placeholder="100" min="0" max="100" />
+    <label>Tỉ lệ đóng góp:
+      <input type="tel" inputmode="numeric" id="edit-tv-tyle" min="0" max="100" />
     </label>
 
     <div class="modal-actions">
