--- a/thongke.html
+++ b/thongke.html
@@ -7,9 +7,11 @@
   <link rel="stylesheet" href="style.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/sql.js/1.6.2/sql-wasm.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/localforage/1.10.0/localforage.min.js"></script>
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+  <!-- <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"> -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+
   <style>
-    body { padding: 20px; background: linear-gradient(45deg, rgba(142, 197, 252, 1.000) 0.000%, rgba(141, 211, 255, 1.000) 25.000%, rgba(161, 216, 255, 1.000) 50.000%, rgba(193, 210, 255, 1.000) 75.000%, rgba(224, 195, 255, 1.000) 100.000%); }
+    /* body { padding: 20px; background: linear-gradient(45deg, rgba(142, 197, 252, 1.000) 0.000%, rgba(141, 211, 255, 1.000) 25.000%, rgba(161, 216, 255, 1.000) 50.000%, rgba(193, 210, 255, 1.000) 75.000%, rgba(224, 195, 255, 1.000) 100.000%); } */
     /* body {
       background: linear-gradient(45deg, rgba(142, 197, 252, 1.000) 0%, rgba(141, 211, 255, 1.000) 25%, rgba(161, 216, 255, 1.000) 50%, rgba(193, 210, 255, 1.000) 75%, rgba(224, 195, 255, 1.000) 100%);
       background-repeat: no-repeat;
@@ -17,6 +19,20 @@
       background-size: cover;
       background-position: center;
     } */
+     body {
+  margin: 0;
+  padding: 0;
+  background: linear-gradient(45deg, rgba(142, 197, 252, 1.000) 0%, rgba(224, 195, 255, 1.000) 100%);
+  background-size: cover;
+  background-position: center;
+  
+  /* Dùng padding để background tràn lên vùng notch */
+  padding-top: env(safe-area-inset-top);
+  padding-left: env(safe-area-inset-left);
+  padding-right: env(safe-area-inset-right);
+  padding-bottom: env(safe-area-inset-bottom);
+}
+
     .section { margin-bottom: 30px; }
     h2 { margin-top: 0; }
     .stat-grid {
