--- a/thongke.html
+++ b/thongke.html
@@ -19,19 +19,14 @@
       background-size: cover;
       background-position: center;
     } */
-     body {
-  margin: 0;
-  padding: 0;
-  background: linear-gradient(45deg, rgba(142, 197, 252, 1.000) 0%, rgba(224, 195, 255, 1.000) 100%);
-  background-size: cover;
-  background-position: center;
-  
-  /* Dùng padding để background tràn lên vùng notch */
-  padding-top: env(safe-area-inset-top);
-  padding-left: env(safe-area-inset-left);
-  padding-right: env(safe-area-inset-right);
-  padding-bottom: env(safe-area-inset-bottom);
+body::before {
+  content: "";
+  position: fixed;
+  top: 0; left: 0; right: 0; bottom: 0;
+  background: linear-gradient(45deg, rgba(142, 197, 252, 1.000), rgba(224, 195, 255, 1.000));
+  z-index: -1;
 }
+
 
     .section { margin-bottom: 30px; }
     h2 { margin-top: 0; }
